fixed overflowing text

--- a/src/index.css
+++ b/src/index.css
@@ -96,11 +96,12 @@ main{
 }
 
 .wrapper h1{
-  width: 400px;
-  height: 200px;
-  margin: 0 auto;
+  width: 100%;
+  height: 150px;
   font-size: 4rem;
   text-transform: capitalize;
+  text-align: left;
+  word-wrap: break-word;
 }
 
 .input{
